# mini-code

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-book.yml
mini-claw-code/: Cargo.toml
mini-claw-code-book/: book.toml  book.zh.toml  index.html  lang-switcher.css  lang-switcher.js
mini-claw-code-book/src/: SUMMARY.md  ch00-overview.md  ch01-core-types.md  ch04-more-tools.md  ch07-putting-together.md  ch08-singularity.md  ch09-tui.md  ch10-streaming.md  ch11-user-input.md  ch12-plan-mode.md  ch13-subagents.md  ch14-mcp.md  ch15-safety.md
mini-claw-code-book/zh/: SUMMARY.md  ch00-overview.md  ch01-core-types.md  ch02-first-tool.md  ch09-tui.md  (+12 more)
mini-claw-code-starter/: Cargo.toml
mini-claw-code-starter/examples/: chat.rs
mini-claw-code-starter/src/: agent.rs  lib.rs  mock.rs  types.rs
mini-claw-code-starter/src/providers/: mod.rs  openrouter.rs
mini-claw-code-starter/src/tests/: ch2.rs  ch3.rs  ch6.rs
mini-claw-code-starter/src/tools/: bash.rs  edit.rs  write.rs
mini-claw-code-xtask/: Cargo.toml
mini-claw-code/examples/: chat.rs  tui.rs
mini-claw-code/src/: agent.rs  lib.rs  planning.rs  streaming.rs  tests.rs  types.rs
mini-claw-code/src/providers/: openrouter.rs
mini-claw-code/src/tests/: ch1.rs  ch10.rs  ch11.rs  ch12.rs  ch3.rs  ch4.rs  ch5.rs  ch7.rs
mini-claw-code/src/tools/: ask.rs  bash.rs  edit.rs  mod.rs  read.rs  write.rs
mini-code/: Cargo.toml
mini-code-book/: book.toml
mini-code-starter/: Cargo.toml
mini-code-xtask/: Cargo.toml
(+28 files in other folders)
