[package]
name = "mini-claw-code-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["process", "fs"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tempfile = "3"

[[example]]
name = "chat"
